delete old version and add new version

--- a/parallel_5.html
+++ b/parallel_5.html
@@ -94,7 +94,11 @@
       }
       #data_info{
             padding:40px 0;        
-      }    
+      }
+      #dimension_reduction{
+            width:100%;
+            float: middle;
+      }          
 
     </style>
 
@@ -122,8 +126,8 @@
       </div>
   </div>
 
-  <div style="text-align:center;">
-        <h2 >Diemension Reduction non-linear projection with selected emphasis</h2>
+  <div id = "dimension_reduction" style="text-align:center;">
+        <h3 >Diemension Reduction non-linear projection with selected emphasis</h2>
         <p>Dimensionality Reduction is about converting data of very high dimensionality into data of much lower dimensionality such that each of the lower dimensions convey much more information.</p>
         <p>Our interaction is to let user (probably domain expert) to select important features and our projection will give extra weights on these selected features.</p>
   </div>
