change file name

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
     //load data
 
-    d3.csv("student-mat-readable.csv",function(students){
+    d3.csv("student_mat_readable.csv",function(students){
 		 //console.log(students[0])
         //display category variables
         category_variable = ["school","sex","address","famsize","Pstatus","Mjob","Fjob","reason",
